@@ -1,41 +1,48 @@
-package gr.uoa.di.madgik.resourcecatalogue.manager;
+package gr.uoa.di.madgik.resourcecatalogue.manager.pids;
 
 import gr.uoa.di.madgik.registry.domain.Browsing;
 import gr.uoa.di.madgik.registry.domain.FacetFilter;
+import gr.uoa.di.madgik.resourcecatalogue.config.properties.CatalogueProperties;
 import gr.uoa.di.madgik.resourcecatalogue.domain.Bundle;
 import gr.uoa.di.madgik.resourcecatalogue.service.GenericResourceService;
 import gr.uoa.di.madgik.resourcecatalogue.service.PIDService;
-import gr.uoa.di.madgik.resourcecatalogue.utils.PIDUtils;
+import org.springframework.stereotype.Service;
 
-@org.springframework.stereotype.Service("pidManager")
-public class PIDManager implements PIDService {
 
-    private final PIDUtils pidUtils;
+@Service
+public class PidManager implements PIDService {
+
+    private final PidIssuer pidIssuer;
     private final GenericResourceService genericResourceService;
+    private final CatalogueProperties catalogueProperties;
 
-    public PIDManager(PIDUtils pidUtils,
-                      GenericResourceService genericResourceService) {
-        this.pidUtils = pidUtils;
+    public PidManager(PidIssuer pidIssuer,
+                      GenericResourceService genericResourceService,
+                      CatalogueProperties catalogueProperties) {
+        this.pidIssuer = pidIssuer;
         this.genericResourceService = genericResourceService;
+        this.catalogueProperties = catalogueProperties;
     }
 
+    @Override
     public Bundle<?> get(String prefix, String suffix) {
         String pid = prefix + "/" + suffix;
-        String resourceType = pidUtils.determineResourceTypeFromPidPrefix(prefix);
-        if (!resourceType.equals("no_resource_type")) {
+        String resourceType = catalogueProperties.getResourceTypeFromPrefix(prefix);
+        if (resourceType != null) {
             FacetFilter ff = new FacetFilter();
             ff.setQuantity(10000);
             ff.setResourceType(resourceType);
             ff.addFilter("resource_internal_id", pid);
             Browsing<Bundle<?>> browsing = genericResourceService.getResults(ff);
             if (!browsing.getResults().isEmpty()) {
-                return browsing.getResults().get(0);
+                return browsing.getResults().getFirst();
             }
         }
         return null;
     }
 
+    @Override
     public void register(String pid) {
-        pidUtils.postPID(pid);
+        pidIssuer.postPID(pid);
     }
 }
